# forge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json  vercel.json
apps/desktop/src-tauri/: AUDIT-REPORT.md  Cargo.toml  TEST-RESULT.md  UNWRAP-AUDIT.md  WEB-AUDIT.md  WEB-SEARCH-RESULT.md  hello.py  maze_solver.py  tauri.conf.json
apps/desktop/src-tauri/.ai-studio/: registry.db
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_metadata.rs  autosave.rs  consts.rs  credential_migration.rs  credential_store.rs  eval_headless.rs  lib.rs  log_store.rs  logger.rs  main.rs  mcp_runtime.rs  process_runner.rs  provider_model_catalog.rs  provider_probe.rs  redaction.rs  session_store.rs  settings.rs  state.rs  transcript.rs  workspace_safety.rs
apps/desktop/src-tauri/tests/: continuity_test.rs  harness_test.rs  integration_test.rs
apps/eval-runner/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/eval-runner/app/: __init__.py  agent_adapter.py  artifacts.py  baselines.py  case_lifecycle.py  cases.py  ci_summary.py  cli.py  config.py  datasets.py  execution.py  experiments.py  flake_triage.py  harness_checks.py  judge_calibration.py  main.py  metrics.py  models.py  patches.py  process_control.py  prompt_mutation.py  red_team.py  report_compare.py  report_render.py  reporting.py  runner.py  sandbox.py  scoring.py  storage.py  trace.py  trace_import.py  trust_gates.py  worker.py  workspace_observer.py
apps/eval-runner/docs/: api-examples.md  architecture.md  case-matrix.md  ops.md  portfolio-demo-guide.md
apps/eval-runner/eval_cases/a2a-child-completed-review-evidence/: case.json
apps/eval-runner/eval_cases/a2a-child-context-capsule-contract/: case.json
apps/eval-runner/eval_cases/a2a-child-failed-recovery-evidence/: case.json
apps/eval-runner/eval_cases/a2a-child-failure-recovery-policy/: case.json
apps/eval-runner/examples/: sample-metrics-response.json  sample-run-request.json  sample-run-response.json  sample-tasks.json  sample-trace-response.json
apps/eval-runner/scripts/: capture_demo_assets.sh
apps/eval-runner/tasks/: sample_tasks.json
apps/eval-runner/tests/: test_api.py  test_baselines.py  test_case_expansion_matrix.py  test_cases.py  test_cli.py  test_continuity_assertions.py  test_continuity_eval_cases.py  test_docker_contract.py  test_execution.py  test_metrics.py  test_process_control.py  test_report_render.py  test_reporting.py  test_runner.py  test_smoke.py  test_storage.py  test_worker.py  test_workspace_observer.py
(+1015 files in other folders)
