[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
